--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ font-weight: 300;1
         <div class="container">
             <header><h1>Hey,<br>Kruthik here</h1></header>
             <div class="units-row units-split wrap" style="display: flex; justify-content: center; align-items: center;">
-                <img src="img/krus.jpg" style="width: 150px; height: 150px; border-radius: 20px;" alt="Kruthik's Photo">
+                <img src="krus.jpg" style="width: 150px; height: 150px; border-radius: 20px;" alt="Kruthik's Photo">
             </div>
 
 <div class="container" id="education">
@@ -321,7 +321,7 @@ font-weight: 300;1
     <div class="container" id="projects">
         <h1>Upcoming<br>Projects</h1>
         <br>
-        <img src="/img/es.png" style="width:550px;">
+        <img src="es.png" style="width:550px;">
         <br>
 
     </div>
